--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Weather App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -20,11 +20,11 @@
                         <input class="p-2 rounded-5 border-0 locationInput" type="text" placeholder="Search location"
                             aria-describedby="basic-addon1">
                         <div class="align-items-center">
-                            <img src="assets/icons/animated/cloudy-day-1.svg" alt="" width="250">
+                            <img id="weatherIcon" src="assets/icons/animated/cloudy-day-1.svg" alt="" width="250">
                         </div>
                         <div class="temprature">
-                            <p class="display-1" id="tempMain">25</p>
-                            <p class="display-9" id="currentDay">Monday, 03:00 PM</p>
+                            <p class="display-1" id="tempMain">0&deg;C</p>
+                            <p class="display-9" id="feelsLike">Feels like 0&deg;C</p>
                         </div>
                     </div>
                 </div>
