--- a/index.html
+++ b/index.html
@@ -8,17 +8,31 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.4.11/jquery.autocomplete.min.js"></script>
+
 </head>
 
 <body>
     <div class="container my-5 ">
-        <div class="row pb-0 pe-lg-0 align-items-center rounded-5 border shadow-lg overflow-hidden main-container">
+        <div class="row pb-0 pe-lg-0 align-items-center rounded-5 border-0 shadow-lg overflow-hidden main-container">
             <div class="col-lg-3 leftPart">
                 <div style="height: auto;" class="p-4 pt-5">
                     <div class="row">
-                        <input class="p-2 rounded-5 border-0 locationInput" type="text" placeholder="Search location"
-                            aria-describedby="basic-addon1">
+                        <!-- <input class="p-2 rounded-5 border-0 locationInput locationiq-autocomplete-input ui-autocomplete-input" id="search-box-input" type="text" placeholder="Search location"
+                            aria-describedby="basic-addon1"> -->
+                            <div id="search-box">
+                                <div class="locationiq-autocomplete-control locationiq-bounds locationiq-control locationiq-autocomplete-expanded" id="search-box-area">
+                                  <input class="p-2 rounded-5 border-0 locationInput" id="search-box-input"
+                                  title="Search" placeholder="Search for an address...">
+                                  <!-- <a class="locationiq-autocomplete-search-icon"></a> -->
+                                  <!-- <a class="locationiq-reset-control" id="reset-autocomplete" title="Reset">x</a> -->
+                                </div>
+                              </div>
                         <div class="align-items-center">
                             <img id="weatherIcon" src="assets/icons/animated/cloudy-day-1.svg" alt="" width="250">
                         </div>
@@ -34,54 +48,57 @@
                     <div class="container  text-center">
                         <div class="row ">
                             <div class="col">
-                                <div class="p-3 rounded-4 border bg-light">
+                                <div class="p-3 rounded-4 border-0 bg-white">
                                     Sun
                                     <img src="assets/icons/animated/cloudy-day-1.svg" alt="" width="50">
                                     <p class="display-10">25&deg;C</p>
                                 </div>
                             </div>
                             <div class="col">
-                                <div class="p-3 rounded-4 border bg-light">
+                                <div class="p-3 rounded-4 border-0 bg-white">
                                     Sun
                                     <img src="assets/icons/animated/cloudy-day-1.svg" alt="" width="50">
                                     <p class="display-10">25&deg;C</p>
                                 </div>
                             </div>
                             <div class="col">
-                                <div class="p-3 rounded-4 border bg-light">
+                                <div class="p-3 rounded-4 border-0 bg-white">
                                     Sun
                                     <img src="assets/icons/animated/cloudy-day-1.svg" alt="" width="50">
                                     <p class="display-10">25&deg;C</p>
                                 </div>
                             </div>
                             <div class="col">
-                                <div class="p-3 rounded-4 border bg-light">
+                                <div class="p-3 rounded-4 border-0 bg-white">
                                     Sun
                                     <img src="assets/icons/animated/cloudy-day-1.svg" alt="" width="50">
                                     <p class="display-10">25&deg;C</p>
                                 </div>
                             </div>
                             <div class="col">
-                                <div class="p-3 rounded-4 border bg-light">
+                                <div class="p-3 rounded-4 border-0 bg-white">
                                     Sun
                                     <img src="assets/icons/animated/cloudy-day-1.svg" alt="" width="50">
                                     <p class="display-10">25&deg;C</p>
                                 </div>
                             </div>
                             <div class="col">
-                                <div class="p-3 rounded-4 border bg-light">
+                                <div class="p-3 rounded-4 border-0 bg-white">
                                     Sun
                                     <img src="assets/icons/animated/cloudy-day-1.svg" alt="" width="50">
                                     <p class="display-10">25&deg;C</p>
                                 </div>
                             </div>
                             <div class="col">
-                                <div class="p-3 rounded-4 border bg-light">
+                                <div class="p-3 rounded-4 border-0 bg-white">
                                     Sun
                                     <img src="assets/icons/animated/cloudy-day-1.svg" alt="" width="50">
                                     <p class="display-10">25&deg;C</p>
                                 </div>
                             </div>
+                        </div>
+                        <div class="row">
+
                         </div>
                     </div>
                 </div>
