fixes and changes
added link in readme

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.4.11/jquery.autocomplete.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.4.11/jquery.autocomplete.min.js"></script>
 
 </head>
 
@@ -23,16 +24,8 @@
             <div class="col-lg-3 leftPart">
                 <div style="height: auto;" class="p-4 pt-5">
                     <div class="row">
-                        <!-- <input class="p-2 rounded-5 border-0 locationInput locationiq-autocomplete-input ui-autocomplete-input" id="search-box-input" type="text" placeholder="Search location"
-                            aria-describedby="basic-addon1"> -->
-                            <div id="search-box">
-                                <div class="locationiq-autocomplete-control locationiq-bounds locationiq-control locationiq-autocomplete-expanded" id="search-box-area">
-                                  <input class="p-2 rounded-5 border-0 locationInput" id="search-box-input"
-                                  title="Search" placeholder="Search for an address...">
-                                  <!-- <a class="locationiq-autocomplete-search-icon"></a> -->
-                                  <!-- <a class="locationiq-reset-control" id="reset-autocomplete" title="Reset">x</a> -->
-                                </div>
-                              </div>
+                        <input class="p-2 rounded-5 border-0 locationInput" id="search-box-input" title="Search"
+                                    placeholder="Search for places...">
                         <div class="align-items-center">
                             <img id="weatherIcon" src="assets/icons/animated/cloudy-day-1.svg" alt="" width="250">
                         </div>
@@ -107,4 +100,5 @@
 
 </body>
 <script src="main.js"></script>
+
 </html>
