--- a/index.html
+++ b/index.html
@@ -39,56 +39,8 @@
             <div class="col-lg-9">
                 <div style="height: auto;" class="p-4 pt-5">
                     <div class="container  text-center">
-                        <div class="row ">
-                            <div class="col">
-                                <div class="p-3 rounded-4 border-0 bg-white">
-                                    Sun
-                                    <img src="assets/icons/animated/cloudy-day-1.svg" alt="" width="50">
-                                    <p class="display-10">25&deg;C</p>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="p-3 rounded-4 border-0 bg-white">
-                                    Sun
-                                    <img src="assets/icons/animated/cloudy-day-1.svg" alt="" width="50">
-                                    <p class="display-10">25&deg;C</p>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="p-3 rounded-4 border-0 bg-white">
-                                    Sun
-                                    <img src="assets/icons/animated/cloudy-day-1.svg" alt="" width="50">
-                                    <p class="display-10">25&deg;C</p>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="p-3 rounded-4 border-0 bg-white">
-                                    Sun
-                                    <img src="assets/icons/animated/cloudy-day-1.svg" alt="" width="50">
-                                    <p class="display-10">25&deg;C</p>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="p-3 rounded-4 border-0 bg-white">
-                                    Sun
-                                    <img src="assets/icons/animated/cloudy-day-1.svg" alt="" width="50">
-                                    <p class="display-10">25&deg;C</p>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="p-3 rounded-4 border-0 bg-white">
-                                    Sun
-                                    <img src="assets/icons/animated/cloudy-day-1.svg" alt="" width="50">
-                                    <p class="display-10">25&deg;C</p>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="p-3 rounded-4 border-0 bg-white">
-                                    Sun
-                                    <img src="assets/icons/animated/cloudy-day-1.svg" alt="" width="50">
-                                    <p class="display-10">25&deg;C</p>
-                                </div>
-                            </div>
+                        <div class="row " id="forcastDays">
+                            
                         </div>
                         <div class="row">
 
