corrected forecast days added Lo Hi temparatures added desciption

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                         </div>
                         <div class="temprature">
                             <p class="display-1" id="tempMain">0&deg;C</p>
-                            <p class="display-9" id="feelsLike">Feels like 0&deg;C</p>
+                            <p class="display-9" id="feelsLikeMinMax">Feels like 0&deg;C</p>
+                            <p class="display-9" id="weatherDesc">Clouds</p>
                         </div>
                     </div>
                 </div>
