--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
                             <img id="weatherIcon" src="assets/icons/animated/cloudy-day-1.svg" alt="" width="250">
                         </div>
                         <div class="temprature">
+                            <!-- <p id="locationText"></p> -->
+                            <marquee id="locationText" behavior="scroll" direction="left" scrollamount="5">Sidebar Test</marquee>
                             <p class="display-1" id="tempMain">0&deg;C</p>
                             <p class="display-9" id="feelsLikeMinMax">Feels like 0&deg;C</p>
+                            <p class="display-9" id="tempMinMax"><i class='fa-solid fa-arrow-down'></i> 0°C, <i class='fa-solid fa-arrow-up'></i>0°C </p>
                             <p class="display-9" id="weatherDesc">Clouds</p>
                         </div>
                     </div>
@@ -48,9 +51,9 @@
                         </div>
                         <div class="row pt-2">
                             <p><b>Today's Highlights</b></p>
-                            <div class="col  text-center">
+                            <div class="col text-center">
                                 <div class="p-2 rounded-4 border-0 bg-white text-muted"> Wind Status<br>
-                                    <img src="assets/icons/static/directional.svg" id="windDirImg" width="20">
+                                    <img src="assets/icons/static/location-arrow-solid.svg" id="windDirImg" width="20">
                                     <p id="windSpeed"></p>
                                 </div>
                             </div>
@@ -69,7 +72,7 @@
 
                         </div>
                         <div class="row pt-2">
-                            <div class="col  text-center">
+                            <div class="col text-center">
                                 <div class="p-2 rounded-4 border-0 bg-white text-muted"> Pressure<br>
                                     <i class="fa-solid fa-temperature-three-quarters"></i>
                                     <p class="display-10" id="pressure">0 hPa</p>
