Bug fix: location label set to empty on no current location

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </div>
                         <div class="temprature">
                             <!-- <p id="locationText"></p> -->
-                            <marquee id="locationText" behavior="scroll" direction="left" scrollamount="5">Sidebar Test</marquee>
+                            <marquee id="locationText" behavior="scroll" direction="left" scrollamount="5"></marquee>
                             <p class="display-1" id="tempMain">0&deg;C</p>
                             <p class="display-9" id="feelsLikeMinMax">Feels like 0&deg;C</p>
                             <p class="display-9" id="tempMinMax"><i class='fa-solid fa-arrow-down'></i> 0°C, <i class='fa-solid fa-arrow-up'></i>0°C </p>
@@ -53,7 +53,7 @@
                             <p><b>Today's Highlights</b></p>
                             <div class="col text-center">
                                 <div class="p-2 rounded-4 border-0 bg-white text-muted"> Wind Status<br>
-                                    <img src="assets/icons/static/location-arrow-solid.svg" id="windDirImg" width="20">
+                                    <img src="assets/icons/static/directional.svg" id="windDirImg" width="20">
                                     <p id="windSpeed"></p>
                                 </div>
                             </div>
