--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <div class="row pt-2">
                             <div class="col text-center">
                                 <div class="p-2 rounded-4 border-0 bg-white text-muted"> Pressure<br>
-                                    <i class="fa-solid fa-temperature-three-quarters"></i>
+                                    <i class="fa-solid fa-minimize"></i>
                                     <p class="display-10" id="pressure">0 hPa</p>
                                 </div>
                             </div>
